Change the style of content in mobile. Make the link position more accurate.

--- a/src/silence.less
+++ b/src/silence.less
@@ -1535,7 +1535,10 @@ a {
     .esa-catalog-contents ul{
         max-height: 150px;
     }
-
+    .esa-catalog-contents ul li{
+        padding-left: 10px;
+        max-width: 80%;
+    }
     .esa-catalog {
         position: fixed;
         top: 60px;
